name:                reesd-client
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Official command-line client for Reesd.
description:         Official command-line client for Reesd.
category:            System
license:             BSD2
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple
homepage:            https://github.com/hypered/reesd-client

source-repository head
  type: git
  location: git://github.com/hypered/reesd-client.git

library
  build-depends:
                       base == 4.*,
                       cmdargs,
                       process
  exposed-modules:     Reesd.Client.Commands.Maintain,
                       Reesd.Client.Commands.Images,
                       Reesd.Client.Commands.Sentinel,
                       Reesd.Client.Commands.Users,
                       Reesd.Client.Commands.Workflows,
                       Reesd.Client.Helpers
  other-modules:       Paths_reesd_client
  ghc-options:         -Wall

executable rd
  hs-source-dirs:      bin
  main-is:             rd.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       reesd-client
  ghc-options:         -Wall

executable rd-maintain
  hs-source-dirs:      bin
  main-is:             rd-maintain.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       reesd-client
  ghc-options:         -Wall

executable rd-images
  hs-source-dirs:      bin
  main-is:             rd-images.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       reesd-client
  ghc-options:         -Wall

executable rd-users
  hs-source-dirs:      bin
  main-is:             rd-users.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       reesd-client
  ghc-options:         -Wall

executable rd-workflows
  hs-source-dirs:      bin
  main-is:             rd-workflows.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       reesd-client
  ghc-options:         -Wall

executable sntnl
  hs-source-dirs:      bin
  main-is:             sntnl.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       reesd-client
  ghc-options:         -Wall
